[metadata]
name = lektor-tags
author = A. Jesse Jiryu Davis
author_email = jesse@emptysquare.net
description = Lektor plugin to add tags.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lektor/lektor-tags
keywords = Lektor, plugin, static-site, blog, tags
license = MIT
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
packages = lektor_tags
include_package_data = True
setup_requires =
    setuptools >= 45
    setuptools_scm >= 6
install_requires =
    dataclasses;python_version<"3.7"

[options.entry_points]
lektor.plugins =
    tags = lektor_tags:TagsPlugin
